<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/login_menu" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/username" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_username"
        android:id="@+id/textusername" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/password" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_pass"
        android:inputType="textPassword"
        android:id="@+id/textpassword" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/btnlogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/question_daftar"
        android:id="@+id/redirectdaftar"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progress"/>

</LinearLayout>
